Produced by Jim Shore and Levi Khatskevitch.
* Added an ImageButtonTester.Click overload that takes no arguments.  Credit to Kyle Heon.
* Added CLS compliance (except for certain members).  Credit to Levi Khatskevitch and Michael Ridgway.
* Added HTTP proxy support to the Browser (HttpClient) object.  Credit to Torin Ford.
* Clarified API documentation for all classes.  Credit to Jim Shore.


Changes in NUnitAsp 1.4.1:
Produced by Jim Shore and Levi Khatskevitch.
* Upgraded to NUnit v2.1.4.  Credit to Jim Shore.


Changes in NUnitAsp 1.4:
Produced by Jim Shore and Levi Khatskevitch.
* Updated installation guide in response to user comments.  Credit to Jim Shore.
* Added support for https: protocol.  Credit to Daniel Granath.
* Added support for basic authentication.  Credit to Daniel Granath.
* Added support for cookies with expiration date.  Credit to Rich Tebb.
* Added support for defining user languages.  Credit to Rich Tebb.
* Added HtmlInputCheckBoxTester.  Credit to Andrew Enfield.
* Added ImageButtonTester.  Credit to Clifton F. Vaughn.
* Added support for sorting data grids.  Credit to Clifton F. Vaughn and Jim Shore.
* Fixed HTML in tutorial.  Credit to Dominique Plante.
* Fixed nested controls to work with .NET v1.1.  Credit to Levi Khatskevitch.
* Clarified action to take when parse error occurs.  Credit to Jim Shore.
* Added Enabled and Disabled properties to appropriate controls.  Credit to Levi Khatskevitch.
* Added Text property to ButtonTester.  Credit to Levi Khatskevitch.
* Added support for Windows Integrated authentication (NTLM). Credit to Mark Smithson.
* Added CurrentUrl property to Browser.  Credit to Jim Shore.
* Added Cookies property to Browser.  Credit to Levi Khatskevitch.
* Detection of infinite redirection loops.  Credit to Levi Khatskevitch.
* Fixed exception when clicking buttons inside UserControl.  Credit to Levi Khatskevitch.
* CheckBoxTester.Checked can now be set to false.  Credit to Simon Jackson.