@@ -250,6 +250,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "HtmlTester\HtmlAnchorTester.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "HtmlTester\HtmlControlTester.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
